--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-07-04  Martin Baulig  <martin@ximian.com>
+
+	* classes/GUIManager.cs
+	(GUIManager): New public class; handles stopping / resuming all
+	threads for a GUI.
+
+	* classes/Process.cs
+	(Process.StartGUIManager): New public method.
+
 2008-07-02  Martin Baulig  <martin@ximian.com>
 
 	* classes/Breakpoint.cs
