--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-19  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Require Mono and XSP from the 2.0 branch.
+
 2008-07-11  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
