--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-07-23  Martin Baulig  <martin@ximian.com>
+
+	* frontend/Command.cs
+	(ShowLocationCommand): Improve `show location' a bit to support
+	struct fields.	
+
 2008-07-19  Martin Baulig  <martin@ximian.com>
 
 	* frontend/Command.cs
