--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-28  Martin Baulig  <martin@ximian.com>
+
+	* test/testsuite/TestManagedTypes.cs: Added testcases for boxing
+	valuetypes.	
+
 2008-07-25  Martin Baulig  <martin@ximian.com>
 
 	* configure.in: Disable XSP support by default.
