2008-08-05  Martin Baulig  <martin@ximian.com>
	Released version 1.0 "Cologne" of the Mono Debugger :-)

	* NEWS: Updated to 1.0.


svn path=/branches/mono-2-0/debugger/; revision=109668

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-05  Martin Baulig  <martin@ximian.com>
+
+	Released version 1.0 "Cologne" of the Mono Debugger :-)
+
+	* NEWS: Updated to 1.0.
+
 2008-07-31  Martin Baulig  <martin@ximian.com>
 
 	* classes/Debugger.cs
