--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,13 @@
 August 5th, 2008 - Martin Baulig
 --------------------------------
 
-Released version 1.0 "Cologne" of the Mono Debugger :-)
+Released version 2.0 "Cologne" of the Mono Debugger :-)
 
 - This is a stable release for Mono 2.0 and will be supported
   for a long period of time.
+
+- As requested by the Mono Release Team, the version number was
+  changed to 2.0.  There is now 1.0.
 
 - Lots of bug fixes went in since 0.80.
 
