--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,10 @@
 2008-08-05  Martin Baulig  <martin@ximian.com>
 
-	Released version 1.0 "Cologne" of the Mono Debugger :-)
+	Released version 2.0 "Cologne" of the Mono Debugger :-)
 
-	* NEWS: Updated to 1.0.
+	* NEWS: Updated to 2.0.
 
-	* configure.in: This is trunk, bump the version number here.
+	* configure.in: This is trunk, bump the version number to 2.1.
 
 2008-07-31  Martin Baulig  <martin@ximian.com>
 
