--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-14  Martin Baulig  <martin@ximian.com>
+
+	* symbolwriter/MdbSymbolReader.cs: Add `-verbose' command line
+	argument and improve the scope variables check.
+
 2008-08-13  Martin Baulig  <martin@ximian.com>
 
 	* test/testsuite/TestAttach.cs
