Index: backend/ThreadManager.cs =================================================================== --- backend/ThreadManager.cs	(revision 110701) +++ backend/ThreadManager.cs	(working copy) @@ -330,7 +330,8 @@
 				check_pending_events ();
 
-				engine_event.Set ();
+				if (command == null)
+					engine_event.Set ();
 				RequestWait ();
 			}
 

svn path=/trunk/debugger/; revision=110908

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-19  Martin Baulig  <martin@ximian.com>
+
+	* backend/ThreadManager.cs: Fixed a hard to find race condition.
+
 2008-08-14  Martin Baulig  <martin@ximian.com>
 
 	* symbolwriter/MdbSymbolReader.cs: Add `-verbose' command line
