--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-21  Martin Baulig  <martin@ximian.com>
+
+	* classes/GUIManager.cs
+	(GUIManager.OnTargetEvent): Ignore `TargetEventType.TargetInterrupted.
+
 2008-08-19  Martin Baulig  <martin@ximian.com>
 
 	Fix a race condition: correctly block until
