--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-09-04  Martin Baulig  <martin@ximian.com>
+
+	* classes/GUIManager.cs
+	(GUIManager.ProcessExitedEvent): New public event.
+
+	* classes/Process.cs
+	(Process.Lookup): New public method to lookup a `Method' from a
+	`TargetAddress'.	
+
 2008-08-21  Martin Baulig  <martin@ximian.com>
 
 	* classes/GUIManager.cs
