--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-19  Martin Baulig  <martin@ximian.com>
+
+	* build/Makefile.am: Small fix from Ian Greenhoe; bug #431771.
+
 2008-10-13  Martin Baulig  <martin@ximian.com>
 
 	* classes/StackFrame.cs
