--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-20  Martin Baulig  <martin@ximian.com>
+
+	* interface/Report.cs: Include timestamps when writing to a file.
+
 2008-10-19  Martin Baulig  <martin@ximian.com>
 
 	* test/src/TestManagedTypes.cs
