--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-10-24  Martin Baulig  <martin@ximian.com>
+
+	Fixes the XSP-issue in #423518.
+
+	* backend/server/x86-linux-ptrace.c
+	(server_ptrace_detach_after_fork): Use a non-blocking wait to make
+	things work in case we already received the SIGSTOP before.
+
 2008-10-23  Martin Baulig  <martin@ximian.com>
 
 	* interface/Report.cs
